Use the absolute value of the object id.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 HEXOID, CHANGES
 
 
-#### 0.2.0 (2009-09-??) ###############################
+#### 0.2.1 (2009-09-22) ###############################
+
+* Use the absolute value of the object id. 
+
+#### 0.2.0 (2009-09-21) ###############################
 
 * Initial public release
