--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,7 +2,7 @@ HEXOID, CHANGES
 
 #### 0.2.2 (2010-02-15) ###############################
 
-* CHANGE: Remove hanna dependency
+* CHANGE: Remove hanna dependency [Diego Elio 'Flameeyes' Pettenò]
 
 #### 0.2.1 (2009-09-22) ###############################
 
